# cloudrift-github-runner

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
deploy/gcloud/: deploy.sh
deploy/terraform/: cloud-init.yml.tpl  main.tf  outputs.tf  variables.tf
examples/: workflow.yml
src/cloudrift_runners/: main.py  state.py
tests/: conftest.py  test_cloudinit.py  test_cloudrift_client.py  test_github_client.py  test_main.py  test_repo_config.py  test_state.py  test_webhook.py
